# StripchatRecorder

./: .dockerignore  .gitignore  Dockerfile  package.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: commands.rs  core.rs  lib.rs  main.rs  recording.rs  streaming.rs
backend/src/commands/: postprocess_cmd.rs  recording_cmd.rs  settings_cmd.rs  streamer_cmd.rs
backend/src/config/: settings.rs
backend/src/core/: emitter.rs  error.rs  logging.rs
backend/src/locale/: manager.rs
backend/src/locale/defaults/app/: en-US.json  zh-CN.json
backend/src/locale/defaults/modules/contact_sheet/: en-US.json  zh-CN.json
backend/src/locale/defaults/modules/filter_short/: en-US.json  zh-CN.json
backend/src/locale/defaults/modules/notify_discord/: en-US.json  zh-CN.json
backend/src/locale/defaults/modules/notify_telegram/: en-US.json  zh-CN.json
backend/src/postprocess/: pipeline.rs
backend/src/recording/: hls.rs  meta.rs  recorder.rs
backend/src/relay/: handler.rs  mod.rs  state.rs  streamer.rs
backend/src/server_mod/: server.rs
backend/src/streaming/: monitor.rs  stripchat.rs
backend/src/watcher/: fs_watch.rs
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.vue  i18n.ts  main.ts  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  emitter.rs  lib.rs  main.rs  state.rs
desktop/src/components/: AddStreamerDialog.vue  NotifyLayer.vue  PipelineNodeBox.vue  StreamerCard.vue
desktop/src/composables/: useFastThumbnail.ts  useRecordings.ts
desktop/src/lib/: api.ts  utils.ts
desktop/src/locales/: en-US.ts  zh-CN.ts
desktop/src/router/: index.ts
desktop/src/stores/: locales.ts  merging.ts  settings.ts  streamers.ts
desktop/src/types/: recordings.ts
desktop/src/views/: FinderView.vue  HomeView.vue  PostprocessView.vue  RecordingsView.vue
docs/: custom-locale.en.md  custom-locale.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/components/: StreamerCard.vue
frontend/src/composables/: useImagePreview.ts  useMerging.ts  useNotify.ts  usePostprocess.ts  useScrollbar.ts
frontend/src/lib/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: locales.ts  moduleLocale.ts  postprocess.ts  ppStatus.ts  streamers.ts
frontend/src/types/: recordings.ts
frontend/src/utils/: format.ts
modules/contact_sheet/: Cargo.toml
modules/filter_short/: Cargo.toml
modules/notify_discord/: Cargo.toml
modules/notify_discord/src/: main.rs
modules/notify_telegram/: Cargo.toml
modules/notify_telegram/src/: main.rs
scripts/: check.desktop.js  check.js  common.js  dev.desktop.js  dev.js  release.desktop.js  release.js
src-tauri/src/: lib.rs
(+14 files in other folders)
