[package]
name = "stripchat-recorder"
version = "0.3.0"
description = "Stripchat Stream Recorder"
authors = ["ChanTrail"]
edition = "2024"

[lib]
name = "stripchat_recorder_lib"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "socks", "rustls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.11"
base64 = "0.22"
parking_lot = "0.12"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = "0.1"
async-stream = "0.3"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
rand = "0.10"
notify = "8"
libc = "0.2"
