[package]
name = "stripchat-recorder-desktop"
version = "0.3.0"
description = "Stripchat Stream Recorder (Desktop)"
authors = ["ChanTrail"]
edition = "2024"

[lib]
name = "stripchat_recorder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 引用 backend 库 crate / Reference the backend library crate
stripchat-recorder-lib = { path = "../../backend", package = "stripchat-recorder" }

tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
