[package]
name = "notify_discord"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "notify_discord_v030"
path = "src/main.rs"

[dependencies]
pp_utils = { path = "../pp_utils" }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "1"
socket2 = "0.6"
